--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,8 @@
   "version": "1.0",
   "permissions": [
     "storage",
-    "tabs"
+    "tabs",
+    "system.display"
   ],
   "background": {
     "service_worker": "background.js"
