--- a/manifest.json
+++ b/manifest.json
@@ -28,5 +28,8 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
-  }
+  },
+  "host_permissions": [
+    "https://xmarkbe.onrender.com//*"
+  ]
 }
